# 2023-01-09-WinSock

./: CMakeLists.txt  README.md
Client/: CMakeLists.txt  main.cpp
Server/: CMakeLists.txt  main.cpp
WebServer/: CMakeLists.txt  main.cpp
WebServer/include/: TcpListener.h
WebServer/src/: CMakeLists.txt  MultiClientChat.cpp  TcpListener.cpp  WebServer.cpp
